# Raytracing

./: .gitignore  CMakeLists.txt  README.md  main  proj02  simple_bkg.ppm  t1  t2
include/: aggregateprimitive.hpp  api.hpp  background.hpp  blinnmaterial.hpp  bounds3.hpp  bvh.hpp  bvhaccel.hpp  camera.hpp  film.hpp  flatmaterial.hpp  geometricprimitive.hpp  integrator.hpp  material.hpp  paramset.hpp  parser.hpp  point2.hpp  primitive.hpp  primlist.hpp  ray.hpp  scene.hpp  shape.hpp  sphere.hpp  surfel.hpp  triangle.hpp  trianglemesh.hpp  vec.hpp
include/light/: ambient.hpp  directional.hpp  light.hpp  point.hpp  spot.hpp
scene/: basic_prj02.xml  basic_prj02_ortho.xml  basic_scene.xml  geometric_spheres_perspective.xml  orthographic.xml  prj03_orthographic.xml  prj03_perspective.xml  prj04_orthografic.xml  prj04_orthografic_100.xml  prj04_perspective.xml  prj04_perspective_100.xml  prj05_ambient.xml  prj05_combined_lights.xml  prj05_directional.xml  prj05_point.xml  prj05_spot.xml  prj06_table.xml  prj06_teapot_orthographic.xml  prj06_teapot_perspective.xml  prj06_three.xml  scene.xml
sphere_position/: .spheres.xml.swp  .two_sphere.xml.swp  geometry_directional.xml  materials.xml  spheres.xml  two_sphere.xml
src/: main.cpp
